(+) Specific SobiPro Icon for Administrator Header

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -38,6 +38,7 @@ Legend:
     (+) Support for printing
     (+) Backend ACL
     (+) New template theme 'terra'
+    (+) Specific SobiPro Icon for Administrator Header
 
     (-) jQuery-UI library removed
 
