--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -39,6 +39,8 @@ Legend:
     (+) Backend ACL
     (+) New template theme 'terra'
     (+) Specific SobiPro Icon for Administrator Header
+    (+) PHP 7 compatibility
+    (+) Joomla! 3.5 compatibility
 
     (-) jQuery-UI library removed
 
@@ -48,6 +50,7 @@ Legend:
     (!) Field labels now within CSS class
     (!) Font Awesome 4 updated to version 4.5.0
     (!) Small CSS improvements in backend
+    (!) Editing the fields in default templates moved to a separate template (editfields.xsl)
 
     (#) Missing default template configuration files added
     (#) Duplicate icons from Font Awesome 4 removed
