--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.FM.URL.DELETE_CLICKS="User can delete Clicks"
 SP.TB.JOOMLA_ACL="Joomla ACL"
 
 SP.SECN.DEPRECATED="These settings are deprecated and will be removed in the next major version of SobiPro!"
