--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -64,6 +64,9 @@ SP.TP.CONFIG.LST_ENTRIESINLINE="Entries per line"
 SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries per page"
 SP.TP.CONFIG.LST_RECURSIVE="Entries recursive"
 SP.TP.CONFIG.LST_ORDERING="Entries ordering"
+SP.TP.CONFIG.PAGINATION="Pagination"
+SP.TP.CONFIG.PAG_AJAX="Ajax"
+SP.TP.CONFIG.PAG_STD="Standard"
 
 SP.TP.SETTINGS_APPS="Applications"
 SP.TP.CONFIG.APPRAR="Review & Rating Application"
