--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -8,7 +8,7 @@ Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 Email: sobi[at]sigsiu.net
 Url: https://www.Sigsiu.NET
 
-@copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+@copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 @license GNU/GPL Version 3
 This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -26,8 +26,13 @@ Legend:
  (!) - Change
 
 
+-------------------
 1.2.2 ()
 -------------------
+    (+) Possibility to load a local version of Bootstrap 3 with 'SobiPro' namespace
+
+    (!) Bootstrap 3 updated to version 3.3.6
+
     (#) Visibility problem with datepicker in modal window
 
 
