--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -6,7 +6,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -17,13 +17,31 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+
+SP.SECN.CFG.GENERAL_SETTINGS="General Settings"
+SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Bootstrap 2"
+SP.SECN.CFG.SETTINGS_BOOTSTRAP3_LOAD="Bootstrap 3"
+SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES="Template layout"
+SP.SECN.CFG.SETTINGS_BOOTSTRAP3SOURCE="Source"
+SP.SECN.CFG.SETTINGS_FONTS="Icon Fonts"
+SP.SECN.CFG.LOAD_ICONS_FONTS="Load"
+SP.SECN.CFG.SETTINGS_BS="Bootstrap"
+SP.SOURCE_YES="Local"
+SP.SOURCE_NO="CDN"
+SP.BOOTSTRAP_YES="Bootstrap 3"
+SP.BOOTSTRAP_NO="Bootstrap 2"
+SP.NOLOAD_NO="Load"
+SP.NOLOAD_YES="Don't load"
+SP.LOAD_YES="Load"
+SP.LOAD_NO="Don't load"
+
+
 SP.FM.URL.DELETE_CLICKS="User can delete Clicks"
 SP.TB.JOOMLA_ACL="Joomla ACL"
 
 SP.SECN.DEPRECATED="These settings are deprecated and will be removed in the next major version of SobiPro!"
 SP.SECN.CFG.ENTRY_ORDER_BY_RANDOM="Random"
 
-SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES_LOAD="Load Bootstrap 3"
 SP.ADM_PERMISSIONS.*_*="All Permissions"
 SP.ADM_PERMISSIONS.EDIT_*="Edit"
 SP.ADM_PERMISSIONS.ADD_*="Add"
@@ -34,7 +52,6 @@ SP.ADM_PERMISSIONS.ACCESS_*="Access"
 SP.ADM_PERMISSIONS.CONFIGURE_*="Configure"
 
 
-SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES="Bootstrap 3 styles"
 SP.FM.INFORMATION="Information"
 SP.FM.INFORMATION_OUT="Output"
 SP.TP.SETTINGS="Template Settings"
@@ -48,7 +65,6 @@ SP.FM.URL.NOFOLLOW="Add nofollow"
 SP.TB.COMPILESAVE="Save & Compile"
 SP.TB.COMPILE="Compile"
 SP.TP.LESS_FILE_COMPILED="Less file has been sucessfully compiled and stored in %s."
-SP.SECN.CFG.LOAD_ICONS_FONTS="Load Icon Fonts"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3="Font Awesome 3"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_2="Font Awesome 3 (2x)"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_3="Font Awesome 3 (3x)"
@@ -502,7 +518,6 @@ SP.SECN.CFG.SECTION_NAME="Name"
 SP.SECN.ADD_SECTION_ALIAS="Alias"
 SP.SECN.CFG.SECTION_DESCRIPTION="Description"
 SP.SECN.CFG.PUBLISHING="Publishing"
-SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Prevent loading Bootstrap 2 "
 SP.SECN.CFG.SETTINGS_ADVANCED="Advanced Settings"
 SP.SECN.CFG.TEMPLATE_DATA="Template"
 SP.SECN.CFG.WARNING="<strong>Heads up!</strong> The template settings can be overwritten completely or partially by specific template configuration files. Also customized templates may ignore some of these settings and behave otherwise."
