--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -35,6 +35,7 @@ Legend:
 
     (#) Visibility problem with datepicker in modal window
     (#) Wrong condition for while loop in SPJoomlaFs::copy
+    (#) Images aren't saved from the back-end (Issue #1552)
 
 
 -------------------
