--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -17,10 +17,12 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 SP.TP.CONFIG.DOCUMENTATION="You will find information on how to use these settings in the <a href="https://www.sigsiu.net/default3-template-settings">documentation</a>. Support is available for members in our <a href="https://www.sigsiu.net/support">support area</a>."
+SP.TP.DEFAULT="default"
 SP.TP.SETTINGS_GENERAL="General Settings"
 SP.TP.CONFIG.CSS="Template Style"
 SP.TP.CONFIG.CSS_COLOUR="Colour theme"
 SP.TP.CONFIG.CSS_EDGE="Edge design"
+SP.TP.CONFIG.FONTSIZE="Base font size"
 SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.SETTINGS_PRINT="Printing"
 SP.TP.CONFIG.SHOWPRT="Show print button"
