--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -33,6 +33,7 @@ Legend:
     (+) Information box when install/update SobiPro
     (+) Bootstrap 2 overwrite file for Bootstrap 3 template
     (+) New template theme 'waterfall'
+    (+) base font size adjustable via template settings
 
     (!) Bootstrap 3 updated to version 3.3.6
 
