--- a/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -16,31 +16,45 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.MENU_LINK_CONTINUE="Click on the 'Save Selection' button to continue."
+
 SP.MANAGE_APPS="Manage Applications"
-SP.MANAGE_APPS_DESC="Install, remove and change state of Apps and Templates"
+SP.MANAGE_APPS_DESC="Install, remove and change state of Applications and Templates"
+
 SP.SOBI_SELECT_FUNCTIONALITY="Select Functionality"
-SP.MENU_LINK_TO_CATEGORY="Link to a Category"
+
+SP.MENU_LINK_TO_CATEGORY="Link to category"
 SP.MENU_LINK_TO_SELECTED_CATEGORY="Link to category '%s'"
-SP.MENU_LINK_TO_ENTRY="Link to an Entry"
+
+SP.MENU_LINK_TO_ENTRY="Link to entry"
 SP.MENU_LINK_TO_SELECTED_ENTRY="Link to entry '%s'"
+SP.MENU_LINK_TO_ENTRY_EXPL="Create a link to a specific entry in the chosen section."
+
 SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
 SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
-SP.SOBI_SELECT_ENTRY="Select Entry"
-SP.MENU_LINK_TO_ADD_ENTRY_FORM="Add Entry Form"
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT="Select Parent Category or Section"
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL="Select the section, or a parent category which should be pre-selected in the add entry form."
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED="%s: Add Entry Form"
-SP.SOBI_MENU_CLEAR="Clear"
-SP.MENU_LINK_TO_SEARCH_FUNCTION="Search Function"
-SP.MENU_LINK_TO_SEARCH_FUNCTION_SELECTED="Selected functionality: Link to search function. Click on 'Save Selection' button to continue."
-SP.SOBI_DATE_LISTING_YEAR="Select Year"
-SP.SOBI_DATE_LISTING_MONTH="Select Month"
-SP.SOBI_DATE_LISTING_DAY="Select Day"
-SP.SOBI_USER_LISTING_SELECTED="Selected functionality: Link to user's own entries list. Click on 'Save Selection' button to continue."
-SP.MENU_LINK_TO_SECTION="Link to a Section"
-SP.MENU_LINK_TO_SECTION_SELECTED="Selected functionality: Link to section main page. Click on 'Save Selection' button to continue."
-SP.SOBI_TPL_OVERRIDE_OPTIONAL="Optional"
 
+SP.SOBI_SELECT_ENTRY="Select Entry"
+SP.SOBI_SELECT_ENTRY_EXPL="Select an entry."
+
+SP.MENU_LINK_TO_ADD_ENTRY_FORM="Link to entry form"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT="Select Parent Category or Section"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL="Select a parent category or section, which should be pre-selected in the entry (add/edit entry) form."
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED="%s: Entry Form"
+
+SP.MENU_LINK_TO_SEARCH_FUNCTION="Link to search form"
+SP.MENU_LINK_TO_SEARCH_FUNCTION_SELECTED="Create a link to the search form of SobiPro."
+
+SP.SOBI_USER_LISTING="Link to user listings"
+SP.SOBI_USER_LISTING_EXPL="Create a link to a listing, which displays all entries of the logged in user."
+
+SP.MENU_LINK_TO_SECTION="Link to section"
+SP.MENU_LINK_TO_SECTION_SELECTED="This will be a link to the section's main page. You need at least one link to each section main page. Do not select a template override for the first link to a section's main page!"
+
+SP.SOBI_DATE_LISTING="Link to listing by date"
+SP.SOBI_DATE_LISTING_EXPL="Create a link to a listing, which displays entries created within a certain time period. You need to select at least a year. You can limit the entries of that year by a month and a specific day."
+SP.SOBI_DATE_LISTING_YEAR="Select year"
+SP.SOBI_DATE_LISTING_MONTH="Select month"
+SP.SOBI_DATE_LISTING_DAY="Select day"
 
 SP.SOBI_NATIVE_TASKS="SobiPro Functionality"
 SP.SOBI_NATIVE_TASKS_EXPL="Create a menu item to SobiPro"
@@ -54,29 +68,23 @@ SP.SOBI_SEARCH="Search"
 SP.SOBI_SEARCH_EXPL="Displays the search form of a selected section."
 SP.SOBI_ADD_FORM="Entry Input"
 SP.SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section."
-SP.SOBI_USER_LISTING="User Listings"
-SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
-SP.SOBI_DATE_LISTING="Listing by Date"
-SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
 
 SP.SOBI_SELECT_SECTION="Select Section"
 SOBI_SELECT_SECTION="Select Section"
 SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to."
 SP.SOBI_SELECT_CATEGORY="Select Category"
 SP.SOBI_SELECT_CATEGORY_EXPL="Optionally select a category within the target section."
-SP.SOBI_SELECT_ENTRY="Select Entry"
-SP.SOBI_SELECT_ENTRY_EXPL="Optionally select an entry within the target section."
 
 SP.SOBI_SELECT_DATE="Select Date"
 SP.SOBI_SELECTED_OBJECT="Selected"
-SP.SOBI_TPL_OVERRIDE="Template Override"
-SP.SOBI_TPL_OVERRIDE_EXPL="Select a template for that view."
+SP.SOBI_TPL_OVERRIDE="Template override"
+SP.SOBI_TPL_OVERRIDE_OPTIONAL="Optional"
+SP.SOBI_TPL_OVERRIDE_EXPL="Select a different template for that view. If you don't select a template, the default one is used (recommended)."
 SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
 
+SP.SOBI_MENU_CLEAR="Clear"
 SP.SOBI_CLOSE_WINDOW="Close"
 SP.SOBI.JMENU_SAVE="Save Selection"
-SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
-SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
 
 SP.OTYPE_ENTRY="Entry"
 SP.OTYPE_CATEGORY="Category"
