--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -139,11 +139,11 @@ SP.SOBI_SECTION_EXPL="Displays a section, category or entry."
 SP.SOBI_SEARCH="Search"
 SP.SOBI_SEARCH_EXPL="Displays the search form of a selected section."
 SP.SOBI_ADD_FORM="Entry Input"
-SP.SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section."
-SP.SOBI_USER_LISTING="User Listings"
-SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
-SP.SOBI_DATE_LISTING="Listing by Date"
-SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
+;SP.SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section."
+;SP.SOBI_USER_LISTING="User Listings"
+;SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
+;SP.SOBI_DATE_LISTING="Listing by Date"
+;SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
 SP.SEC.CFG.ENTRY_ORDER_BY_POSITION_ASCENDING="Position ascending"
 SP.SEC.CFG.ENTRY_ORDER_BY_POSITION_DESCENDING="Position descending"
 SP.SEC.CFG.ENTRY_ORDER_BY_POPULARITY_ASCENDING="Least popular first"
