(#) No warning if no entry is selected when adding menu link to entry     (!) Warning if no year is selected when adding menu link to a listing by date

--- a/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -5,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -29,6 +29,7 @@ SP.MENU_LINK_TO_SELECTED_CATEGORY="Link to category '%s'"
 SP.MENU_LINK_TO_ENTRY="Link to entry"
 SP.MENU_LINK_TO_SELECTED_ENTRY="Link to entry '%s'"
 SP.MENU_LINK_TO_ENTRY_EXPL="Create a link to a specific entry in the chosen section."
+SP.MENU_LINK_TO_ENTRY_MISSING="Please select an entry first!"
 
 SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
 SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
@@ -39,7 +40,7 @@ SP.SOBI_SELECT_ENTRY_EXPL="Select an entry."
 SP.MENU_LINK_TO_ADD_ENTRY_FORM="Link to entry form"
 SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT="Select Parent Category or Section"
 SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL="Select a parent category or section, which should be pre-selected in the entry (add/edit entry) form."
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED="%s: Entry Form"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED="Link to entry form with category '%s' preselected"
 
 SP.MENU_LINK_TO_SEARCH_FUNCTION="Link to search form"
 SP.MENU_LINK_TO_SEARCH_FUNCTION_SELECTED="Create a link to the search form of SobiPro."
@@ -55,6 +56,7 @@ SP.SOBI_DATE_LISTING_EXPL="Create a link to a listing, which displays entries cr
 SP.SOBI_DATE_LISTING_YEAR="Select year"
 SP.SOBI_DATE_LISTING_MONTH="Select month"
 SP.SOBI_DATE_LISTING_DAY="Select day"
+SP.SOBI_DATE_LISTING_MISSING="Please select at least a year!"
 
 SP.SOBI_NATIVE_TASKS="SobiPro Functionality"
 SP.SOBI_NATIVE_TASKS_EXPL="Create a menu item to SobiPro"
