--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -37,6 +37,7 @@ Legend:
 
     (!) Bootstrap 3 updated to version 3.3.6
     (!) SobiPro menu link selection layout improved
+    (!) Warning if no year is selected when adding menu link to a listing by date
 
     (#) Visibility problem with datepicker in modal window
     (#) Wrong condition for while loop in SPJoomlaFs::copy
@@ -47,6 +48,7 @@ Legend:
     (#) Several fixes in template installer
     (#) No possibility to translate the "select option" label in select list (Issue #1562)
     (#) Wrong selector for search highlighter (Issue #1563)
+    (#) No warning if no entry is selected when adding menu link to entry
 
 
 -------------------
