(+) Template override for search form

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -34,6 +34,7 @@ Legend:
     (+) Bootstrap 2 overwrite file for Bootstrap 3 template
     (+) New template theme 'waterfall'
     (+) base font size adjustable via template settings
+    (+) Template override for search form
 
     (!) Bootstrap 3 updated to version 3.3.6
     (!) SobiPro menu link selection layout improved
