(!) Layout of back-end ACL settings improved

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -40,6 +40,7 @@ Legend:
     (!) SobiPro menu link selection layout improved
     (!) Warning if no year is selected when adding menu link to a listing by date
     (!) Template for display fields now includes the default image
+    (!) Layout of back-end ACL settings improved
 
     (#) Visibility problem with datepicker in modal window
     (#) Wrong condition for while loop in SPJoomlaFs::copy
