--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -42,14 +42,14 @@ SP.TB.JOOMLA_ACL="Joomla ACL"
 SP.SECN.DEPRECATED="These settings are deprecated and will be removed in the next major version of SobiPro!"
 SP.SECN.CFG.ENTRY_ORDER_BY_RANDOM="Random"
 
-SP.ADM_PERMISSIONS.*_*="All Permissions"
-SP.ADM_PERMISSIONS.EDIT_*="Edit"
-SP.ADM_PERMISSIONS.ADD_*="Add"
-SP.ADM_PERMISSIONS.DELETE_*="Delete"
-SP.ADM_PERMISSIONS.APPROVE_*="Approve"
-SP.ADM_PERMISSIONS.PUBLISH_*="Publish"
-SP.ADM_PERMISSIONS.ACCESS_*="Access"
-SP.ADM_PERMISSIONS.CONFIGURE_*="Configure"
+SP.ADM_PERMISSIONS.*_*="all permissions"
+SP.ADM_PERMISSIONS.EDIT_*="edit"
+SP.ADM_PERMISSIONS.ADD_*="add"
+SP.ADM_PERMISSIONS.DELETE_*="delete"
+SP.ADM_PERMISSIONS.APPROVE_*="approve"
+SP.ADM_PERMISSIONS.PUBLISH_*="publish"
+SP.ADM_PERMISSIONS.ACCESS_*="access"
+SP.ADM_PERMISSIONS.CONFIGURE_*="configure"
 
 
 SP.FM.INFORMATION="Information"
