(#) Missing fields to change position of categories (Issue #1570)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -53,6 +53,7 @@ Legend:
     (#) Wrong selector for search highlighter (Issue #1563)
     (#) No warning if no entry is selected when adding menu link to entry
     (#) Several issue with backend ACL (Issues #1567, #1568, #1569)
+    (#) Missing fields to change position of categories (Issue #1570)
 
 
 -------------------
