--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -182,7 +182,7 @@ SP.SH.RANGE_TO="To: "
 SP.SH.SEARCH_SELECT_RANGE_FROM="var:[name] from"
 SP.SH.SEARCH_SELECT_RANGE_TO="var:[name] until"
 SP.AL.TITLE="var:[section] - Entries starting with 'var:[letter]'"
-SP.AL.PATH_TITLE="Entries starting with 'var:[letter]'"
+SP.AL.PATH_TITLE="Entries with var:[field]s starting with 'var:[letter]'"
 SP.AL.TITLE_FIELD="var:[section] - Entries with var:[field] starting with 'var:[letter]'"
 SP.AL.PATH_TITLE_FIELD="Entries with var:[field] starting with 'var:[letter]'"
 SP.MN.SEARCH="Search"
