--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -34,6 +34,7 @@ Legend:
     (#) Forcing template installation doesn't work
     (#) Wrong setting displayed for separate JSON files in template settings
     (#) Not possible to save multi select list (Issue #1591)
+    (#) SPFactory::Instance PHP 5.6 compatibility
 
 
 -------------------
