--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -42,6 +42,7 @@ Legend:
     (#) Empty head ling when no font icons selected (Issue # #1593)
     (#) Missing language as a selector in category field cache (Issue #1579)
     (#) Forcing string handling of labels in checkbox and radio buttons (Issue ##1578)
+    (#) Wrong languages selected as current while translating (Issue #1572)
 
 
 -------------------
