--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -46,6 +46,7 @@ Legend:
     (#) Wrong languages selected as current while translating (Issue #1572)
     (#) Missing some settings due to ACL implementation (Issue #1575)
 
+    (!) Improvements in Cron CLI script
 
 -------------------
 1.2.2 (28 January 2016)
