(+) System Report now informs user to scroll down to read all results of the system check

--- a/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -34,8 +34,8 @@ SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required 
 SP.JS_RED_HIGHLIGHTED_FIELD="Highlighted field"
 SP.JS_CONNECTION_TIMED_OUT="Connection timed out."
 SP.JS_DONE="Done!"
-SP.JS_REQUIREMENT_ERR="Really sorry, but your server does not meet the minimum requirements to use the SobiPro component.{newline}Please view the SobiPro documentation to see what may need to be done to update your server or simply uninstall this component."
-SP.JS_REQUIREMENT_WARN="It seems that your server covers the minimum requirements to use SobiPro component.{newline}However there were some warnings. Please read the list below carefully before you proceed."
+SP.JS_REQUIREMENT_ERR="Your server does not meet the minimum requirements to run SobiPro.{newline}Please close this window and read through the system check report (scroll down to see the whole list). You will find a detailed requirements list on our site."
+SP.JS_REQUIREMENT_WARN="It seems that your server covers the minimum requirements to run SobiPro.{newline}However there were some warnings. Please read the system check report carefully before you proceed."
 SP.JS_REQUIREMENT_WORKING_MSG="Wait please ... %d processes are still running"
 SP.JS_REQUIREMENT_READ_PLEASE="Wow. You read the whole list in about %d seconds!!{newline}Are you sure you don't want to read it again?!"
 SP.JS_TOO_LONG_ANSWER_LIMIT_EXPIRED_SKIPPING="Answer too long. Limit expired. Skipping."
