--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,8 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 
+SP.REQ.MOREINFO="SobiPro is checking your system and will tell you if your server doesn't fulfill the requirements (scroll down to see the whole list). A green <span class=\"label label-success\">Success</span> means a requirement is fulfilled and an orange <span class=\"label label-warning\">Warning</span> means some features in SobiPro won't work. A red <span class=\"label label-important\">Error</span> is a stopper and needs action. If your server does not fulfill the requirements, please read through the <a href=\"https://www.sigsiu.net/sobipro/requirements\" target=\"blank\">detailed description of the requirements</a> on our site for more information."
+
 SP.SECN.CFG.GENERAL_SETTINGS="General Settings"
 SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Bootstrap 2"
 SP.SECN.CFG.SETTINGS_BOOTSTRAP3_LOAD="Bootstrap 3"
