--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -27,12 +27,15 @@ Legend:
 
 
 -------------------
-1.2.3 ()
+1.2.3 (28 March 2016)
 -------------------
 	(+) Added unpublished sign to unpublished categories
 	(+) Additional cache for categories relation in category field
 	(+) datepicker CSS improvements (against template overwrites)
 	(+) System Report now informs user to scroll down to read all results of the system check
+
+    (!) Improvements in Cron CLI script
+    (!) PNG compression increased
 
     (#) Forcing template installation doesn't work
     (#) Wrong setting displayed for separate JSON files in template settings
@@ -46,10 +49,6 @@ Legend:
     (#) Forcing string handling of labels in checkbox and radio buttons (Issue ##1578)
     (#) Wrong languages selected as current while translating (Issue #1572)
     (#) Missing some settings due to ACL implementation (Issue #1575)
-
-    (!) Improvements in Cron CLI script
-    (!) PNG compression increased
-
 
 
 -------------------
