--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -69,6 +69,7 @@ SP.TP.CONFIG.LST_ORDERING="Entries ordering"
 SP.TP.CONFIG.PAGINATION="Pagination"
 SP.TP.CONFIG.PAG_AJAX="Ajax"
 SP.TP.CONFIG.PAG_STD="Standard"
+SP.TP.CONFIG.SHOW_NONE="None"
 
 SP.TP.SETTINGS_APPS="Applications"
 SP.TP.CONFIG.APPRAR="Review & Rating Application"
