new template setting texts

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -48,6 +48,13 @@ SP.TP.SETTINGS_FEATURES="General Features"
 SP.TP.CONFIG.ENTRIES_NOIMG="Show 'no image' placeholder"
 SP.TP.CONFIG.ENTRIES_FACCOL="Facilities colour"
 SP.TP.CONFIG.ENTRIES_IMGRATIO="Placeholder ratio"
+SP.TP.CONFIG.ENTRIES_PLACEHOLDER="Show placeholder image"
+SP.TP.CONFIG.ENTRIES_W-L="White on Light-grey"
+SP.TP.CONFIG.ENTRIES_W-D="White on Dark-grey"
+SP.TP.CONFIG.ENTRIES_L-D="Light-grey on Dark-grey"
+SP.TP.CONFIG.ENTRIES_L-W="Light-grey on White"
+SP.TP.CONFIG.ENTRIES_D-L="Dark-grey on Light-grey"
+SP.TP.CONFIG.ENTRIES_D-W="Dark-grey on White"
 SP.TP.SETTINGS_VCARD="vCard"
 SP.TP.CONFIG.TEXTLENGTH="Shorten text to"
 SP.TP.CONFIG.ENTRIES_IMGSIZESMALL="Image width"
