--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -61,6 +61,8 @@ SP.TP.CONFIG.ENTRIES_IMGSIZESMALL="Image width"
 SP.TP.SETTINGS_DETAILS="Details View"
 SP.TP.CONFIG.CAROUSELIMG="Carousel image height"
 SP.TP.CONFIG.TABSTYLE="Tab style"
+SP.TP.CONFIG.HEADIMAGE="Header Image"
+SP.TP.CONFIG.CUSTOM="Custom Image (custom.png)"
 
 SP.TP.SETTINGS_VIEW="View Settings"
 SP.TP.SETTINGS_VIEWFEATURE="View Features"
