--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -16,6 +16,7 @@
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
+SP.CAT_FIELD_SELECT_CAT_WITH_NO_CHILDS="Please select a category without subcategories in field '%s'"
 
 SP.IDENTIFIER_EXPECTED_DESC="Please take care of what you are selecting! Do not mix functions for categories and entries."
 SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled the resize or crop option, but you didn't provide the width and/or height."
