--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -27,9 +27,10 @@ Legend:
 
 
 -------------------
-1.2.4 ()
+1.2.4 Beta A ()
 -------------------
     (+) Category field: new category selector (populated select list)
+    (+) Category field: sorting of categories in entry form adjustable
 
 	(#) Warnings/notices in SobiPro panel, if no news available from our server
 
