--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -6,7 +6,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -16,7 +16,8 @@
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
-SP.CAT_FIELD_SELECT_CAT_WITH_NO_CHILDS="Please select a category without subcategories in field '%s'"
+
+SP.CAT_FIELD_SELECT_CAT_WITH_NO_CHILDS="Please select a category without subcategories in field '%s'."
 
 SP.IDENTIFIER_EXPECTED_DESC="Please take care of what you are selecting! Do not mix functions for categories and entries."
 SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled the resize or crop option, but you didn't provide the width and/or height."
