(+) Template hook added on bottom of all views

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -22,7 +22,14 @@ SP.TP.SETTINGS_GENERAL="General Settings"
 SP.TP.CONFIG.CSS="Template Style"
 SP.TP.CONFIG.CSS_COLOUR="Colour theme"
 SP.TP.CONFIG.CSS_EDGE="Edge design"
+SP.TP.CONFIG.TOPMENU="Top Menu"
+SP.TP.CONFIG.TOPMENU_STANDARD="Standard Top Menu"
+SP.TP.CONFIG.TOPMENU_BAR="Link Bar"
+SP.TP.CONFIG.FONTS="Fonts"
 SP.TP.CONFIG.FONTSIZE="Base font size"
+SP.TP.CONFIG.FONT="Base font"
+SP.TP.CONFIG.SPECIALFONT="Font for Headings"
+SP.TP.CONFIG.FEONTSELECTION="None (Joomla! template default)"
 SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.SETTINGS_PRINT="Printing"
 SP.TP.CONFIG.SHOWPRT="Show print button"
